--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,10 @@ body {
     background-color: #fafafa;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 img {
     display: block;
 }
@@ -973,7 +977,7 @@ fieldset {
 
 .footer {
     background-color: #1e1823;
-    padding: 32px 20px;
+    padding: 32px 4px;
 }
 
 .container-footer {
@@ -981,7 +985,7 @@ fieldset {
     padding-bottom: 32px;
     max-width: 367px;
     margin: 0 auto;
-    padding: 0 16px;
+    /* padding: 0 16px; */
 }
 
 .footer-title {
@@ -1024,7 +1028,302 @@ fieldset {
     color: #fd9222;
 }
 
+.container-footer-list {
+    max-width: 367px;
+    margin: 0 auto;
+    margin-top: 32px;
+}
+
+.footer-list {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    margin-bottom: 32px;
+}
+
+.footer-list-item-link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: -0.02em;
+    color: #fff;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-list-item-link:hover,
+.footer-list-item-link:focus {
+    color: #fd9222;
+}
+
+/* .container-footer-form {
+    display: flex;
+    gap: 8px;
+} */
+
+.footer-form {
+    display: flex;
+    gap: 8px;
+}
+
+.footer-form-input {
+    border: 1.50px solid rgba(255, 255, 255, 0.15);
+    border-radius: 30px;
+    padding: 14px 18px;
+    max-width: 207px;
+    min-height: 45px;
+    outline: none;
+    background-color: transparent;
+    color: #fff;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-form-input:focus {
+    border-color: #fd9222;
+}
+
+.footer-form-btn {
+    border-radius: 100px;
+    padding: 14px 26px;
+    max-width: 120px;
+    min-height: 45px;
+    background-color: #fd9222;
+    border: none;
+    font-weight: 600;
+    font-size: 14px;
+    color: #fff;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-form-btn:hover,
+.footer-form-btn:focus {
+    background-color: #fcf1e0;
+    color: #fd9222;
+}
+
 /* #endregion Mobile Footer */
+
+/* #region Mobile Modal */
+
+.backdrop {
+    position: fixed;
+    background-color: rgba(46, 47, 66, 0.4);
+    top: 0;
+    left: 0;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    border-radius: 15px;
+    min-width: 311px;
+    min-height: 619px;
+    background-color: #fafafa;
+    padding: 32px 24px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn-close {
+    position: absolute;
+    top: 14px;
+    right: 14px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    background-color: transparent;
+    border: none;
+}
+
+.modal-btn-close-icon {
+    display: block;
+    stroke: #111;
+    transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn-close-icon:hover,
+.modal-btn-close-icon:focus {
+    stroke: #fd9222;
+}
+
+.modal-text {
+    font-family: "Montserrat", sans-serif;
+    max-width: 255px;
+    min-height: 48px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: -0.03em;
+    text-transform: uppercase;
+    color: #111;
+    margin-bottom: 32px;
+}
+
+.container-modal-label {
+    margin-bottom: 14px;
+    min-height: 66px;
+}
+
+.modal-label {
+    display: block;
+    font-weight: 400;
+    font-size: 13px;
+    letter-spacing: -0.02em;
+    color: rgba(64, 64, 64, 0.3);
+    margin-bottom: 8px;
+}
+
+.container-modal-input {
+    position: relative;
+}
+
+.modal-input {
+    border: 1px solid rgba(17, 17, 17, 0.05);
+    border-radius: 13px;
+    padding: 14px 18px;
+    width: 100%;
+    height: 45px;
+    padding-left: 43px;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus {
+    border-color: #fd9222;
+    outline: none;
+}
+
+.modal-input:focus+.modal-input-icon {
+    stroke: #fd9222;
+}
+
+.modal-input-icon {
+    position: absolute;
+    top: 14px;
+    left: 18px;
+    width: 17px;
+    height: 17px;
+
+    fill: none;
+    stroke: #111;
+    transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.container-modal-textarea {
+    margin-bottom: 18px;
+    min-height: 112px;
+}
+
+.modal-textarea {
+    border: 1px solid rgba(17, 17, 17, 0.05);
+    border-radius: 8px;
+    padding: 14px 18px;
+    width: 100%;
+    height: 91px;
+    resize: none;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-textarea::placeholder {
+    font-weight: 400;
+    font-size: 13px;
+    letter-spacing: -0.02em;
+    color: rgba(64, 64, 64, 0.3);
+}
+
+.modal-textarea:focus {
+    border-color: #fd9222;
+    outline: none;
+}
+
+.container-checkbox {
+    display: flex;
+    margin-bottom: 40px;
+}
+
+.castom-checkbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20px;
+    height: 20px;
+    border-radius: 6px;
+    margin-right: 12px;
+    background-color: transparent;
+    fill: transparent;
+    border: 1px solid rgba(17, 17, 17, 0.14);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-checkbox:checked+.checkbox-label .castom-checkbox {
+    fill: #F4F4FD;
+    border: none;
+    background-color: #fd9222;
+
+}
+
+.checkbox-label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* font-weight: 400;
+    font-size: 12px;
+    letter-spacing: -0.02em;
+    color: rgba(64, 64, 64, 0.6); */
+    /* white-space: nowrap; */
+}
+
+.span-text {
+    font-weight: 400;
+    font-size: 12px;
+    letter-spacing: -0.02em;
+    color: rgba(64, 64, 64, 0.6);
+    width: 231px;
+}
+
+.checkbox-link {
+    /* display: block; */
+    margin-left: 4px;
+}
+.modal-btn-send {
+    border-radius: 100px;
+    padding: 14px 40px;
+    width: 117px;
+    height: 45px;
+    background-color: #fd9222;
+    border: none;
+    font-weight: 600;
+    font-size: 14px;
+    color: #fff;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn-send:hover,
+.modal-btn-send:focus {
+    background-color: #fcf1e0;
+    color: #fd9222;
+}
+
+/* #endregion Mobile Modal */
 
 /* #endregion ========== MOBILE ==========*/
 
@@ -1267,13 +1566,13 @@ fieldset {
 
 @media screen and (min-width: 736px) {
     .footer {
-        padding: 50px 32px;
+        padding: 50px 16px;
     }
 
     .container-footer {
         display: flex;
         justify-content: space-between;
-        padding-bottom: 54px;
+        /* margin-bottom: 54px; */
         max-width: 736px;
     }
 
@@ -1282,9 +1581,110 @@ fieldset {
         line-height: 1.21;
         margin-bottom: 0;
     }
+
+    .container-footer-list {
+        display: flex;
+        justify-content: space-between;
+        align-items: baseline;
+        max-width: 736px;
+        margin-top: 24px;
+    }
+
+    .footer-list {
+        flex-direction: row;
+        gap: 16px;
+        margin-bottom: 0;
+    }
+
+    .footer-form-input {
+        padding: 14px 24px;
+        max-width: 233px;
+    }
+
+    .footer-form-btn {
+        padding: 14px 28px;
+        max-width: 128px;
+    }
 }
 
 /* #endregion Tablet Footer */
+
+/* #region Tablet Modal */
+
+@media screen and (min-width: 736px) {
+    .modal {
+        min-width: 517px;
+        min-height: 794px;
+        padding: 40px;
+    }
+
+    .modal-btn-close {
+        top: 24px;
+        right: 24px;
+    
+        width: 28px;
+        height: 28px;
+    }
+
+    .modal-text {
+        max-width: 298px;
+        min-height: 56px;
+        font-size: 24px;
+        line-height: 1.17;
+        margin-bottom: 40px;
+    }
+
+    .container-modal-label {
+        margin-bottom: 18px;
+        min-height: 93px;
+    }
+
+    .modal-label {
+        font-size: 14px;
+    }
+
+    .modal-input {
+        padding: 22px 24px;
+        width: 100%;
+        height: 68px;
+        padding-left: 62px;
+    }
+
+    .modal-input-icon {
+        top: 22px;
+        left: 24px;
+        width: 24px;
+        height: 24px;
+    }
+
+    .container-modal-textarea {
+        min-height: 162px;
+    }
+
+    .modal-textarea {
+        border-radius: 13px;
+        padding: 22px 24px;
+        height: 137px;
+    }
+    
+    .modal-textarea::placeholder {
+        font-size: 18px;
+    }
+
+    .checkbox-label {
+        font-size: 14px;
+        white-space: nowrap;
+    }
+
+    .span-text {
+        font-size: 14px;
+         letter-spacing: -0.02em;
+        color: rgba(64, 64, 64, 0.6);
+        width: 364px;
+    }
+}
+
+/* #endregion Tablet Modal */
 
 /* #endregion ========== TABLET ==========*/
 
@@ -1469,8 +1869,30 @@ fieldset {
         padding-bottom: 50px;
         max-width: 1136px;
     }
+
+    .container-footer-list {
+        max-width: 1136px;
+    }
+
+    .footer-form-input {
+        padding: 13px 24px;
+        max-width: 313px;
+        min-height: 52px;
+    }
+
+    .footer-form-btn {
+        /* padding: 17px 40px; */
+        min-width: 137px;
+        min-height: 52px;
+    }
 }
 
 /* #endregion Desktop Footer */
+
+/* #region Desktop Modal */
+
+
+
+/* #endregion Desktop Modal */
 
 /* #endregion ========== DESKTOP ==========*/
